crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-cms__cms__templatetags__cms_static.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-cms/cms/templatetags/cms_static.py
---
tag_rules: {}
filter_arities: {}
block_specs: {}
