crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__django-cms__cms__templatetags__cms_tags.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/django-cms/cms/templatetags/cms_tags.py
---
tag_rules:
  "cms.templatetags.cms_tags::tag::render_extra_menu_items":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
      - name: template
        required: false
        kind: Variable
        position: 1
    supports_as_var: true
  "cms.templatetags.cms_tags::tag::render_plugin":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: plugin
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "cms.templatetags.cms_tags::tag::show_placeholder":
    arg_constraints:
      - Min: 4
      - Max: 7
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: placeholder_name
        required: true
        kind: Variable
        position: 1
      - name: reverse_id
        required: true
        kind: Variable
        position: 2
      - name: lang
        required: false
        kind: Variable
        position: 3
      - name: site
        required: false
        kind: Variable
        position: 4
      - name: use_cache
        required: false
        kind: Variable
        position: 5
    supports_as_var: true
  "cms.templatetags.cms_tags::tag::show_placeholder_by_id":
    arg_constraints:
      - Min: 4
      - Max: 7
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: placeholder_name
        required: true
        kind: Variable
        position: 1
      - name: reverse_id
        required: true
        kind: Variable
        position: 2
      - name: lang
        required: false
        kind: Variable
        position: 3
      - name: site
        required: false
        kind: Variable
        position: 4
      - name: use_cache
        required: false
        kind: Variable
        position: 5
    supports_as_var: true
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    supports_as_var: true
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder_by_id":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: context
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
